--- a/index.html
+++ b/index.html
@@ -15,7 +15,48 @@
 
 <body>
 
-   <header class="header"></header>
+   <header class="header">
+      <div class="container">
+         <div class="header__inner">
+
+            <div class="header__logo">
+               <img class="header__logo-img" src="img/icons/logo.svg" width="141" height="53" alt="Скай">
+            </div>
+
+            <nav class="header__menu">
+               <ul class="header__menu-list">
+                  <li class="header__menu-item">
+                     <a class="header__menu-link" href="#">Прокат инвентаря</a>
+                  </li>
+                  <li class="header__menu-item">
+                     <a class="header__menu-link" href="#">Каток</a>
+                  </li>
+                  <li class="header__menu-item">
+                     <a class="header__menu-link" href="#">Кафе</a>
+                  </li>
+                  <li class="header__menu-item">
+                     <a class="header__menu-link" href="#">Сервис</a>
+                  </li>
+                  <li class="header__menu-item">
+                     <a class="header__menu-link" href="#">Прайс-лист</a>
+                  </li>
+                  <li class="header__menu-item">
+                     <a class="header__menu-link" href="#">Контакты</a>
+                  </li>
+               </ul>
+            </nav>
+
+            <p class="header__time">Ежедневно 10.00-22.00</p>
+
+            <div class="header__phone">
+               <button class="header__phone-btn">
+                  <img class="header__phone-img" src="img/icons/phone.svg" width="16" height="16" alt="Телефон">
+               </button>
+            </div>
+
+         </div>
+      </div>
+   </header>
 
    <main class="main"></main>
 
