--- a/index.html
+++ b/index.html
@@ -60,7 +60,19 @@
 
    <main class="main"></main>
 
-   <footer class="footer"></footer>
+   <footer class="footer">
+      <div class="container">
+         <div class="footer__inner">
+
+            <div class="footer__top"></div>
+
+            <div class="footer__middle"></div>
+
+            <div class="footer__bottom"></div>
+
+         </div>
+      </div>
+   </footer>
 
    <!-- js -->
    <script src="js/main.js"></script>
