--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 
 <body>
 
+   <!-- header -->
    <header class="header">
       <div class="container">
          <div class="header__inner">
 
+            <!-- logo -->
             <div class="header__logo">
                <img class="header__logo-img" src="img/icons/logo.svg" width="141" height="53" alt="Скай">
             </div>
 
+            <!-- menu -->
             <nav class="header__menu">
                <ul class="header__menu-list">
                   <li class="header__menu-item">
@@ -46,8 +49,10 @@
                </ul>
             </nav>
 
+            <!-- time -->
             <p class="header__time">Ежедневно 10.00-22.00</p>
 
+            <!-- phone -->
             <div class="header__phone">
                <button class="header__phone-btn">
                   <img class="header__phone-img" src="img/icons/phone.svg" width="16" height="16" alt="Телефон">
@@ -60,17 +65,60 @@
 
    <main class="main"></main>
 
+   <!-- footer -->
    <footer class="footer">
       <div class="container">
-         <div class="footer__inner">
 
-            <div class="footer__top"></div>
+         <!-- top -->
+         <div class="footer__top">
 
-            <div class="footer__middle"></div>
+            <div class="footer__logo">
+               <img class="footer__logo-img" src="img/icons/logo-white.svg" width="141" height="53" alt="Скай">
+            </div>
 
-            <div class="footer__bottom"></div>
+            <p class="footer__time">Ежедневно 10.00-22.00</p>
+
+            <address class="footer__address">
+               <div class="footer__address-icon">
+                  <img class="footer__address-icon-img" src="img/icons/map-pin.svg" width="16" height="16" loading="lazy" alt="Иконка">
+               </div>
+               <p class="footer__address-text">Шоссе Космонавтов 158/4</p>
+               <a class="footer__address-link" href="#">Мы на карте</a>
+            </address>
 
          </div>
+
+         <!-- middle -->
+         <div class="footer__middle">
+            <nav class="footer__menu">
+               <ul class="footer__menu-list">
+                  <li class="footer__menu-item">
+                     <a class="footer__menu-link" href="#">Прокат инвентаря</a>
+                  </li>
+                  <li class="footer__menu-item">
+                     <a class="footer__menu-link" href="#">Каток</a>
+                  </li>
+                  <li class="footer__menu-item">
+                     <a class="footer__menu-link" href="#">Кафе</a>
+                  </li>
+                  <li class="footer__menu-item">
+                     <a class="footer__menu-link" href="#">Сервис</a>
+                  </li>
+                  <li class="footer__menu-item">
+                     <a class="footer__menu-link" href="#">Прайс-лист</a>
+                  </li>
+                  <li class="footer__menu-item">
+                     <a class="footer__menu-link" href="#">Контакты</a>
+                  </li>
+               </ul>
+            </nav>
+         </div>
+
+         <!-- bottom -->
+         <div class="footer__bottom">
+            <p class="footer__copyright">© 2007-2025 ООО «Шторм»</p>
+         </div>
+
       </div>
    </footer>
 
