--- a/index.html
+++ b/index.html
@@ -15,17 +15,14 @@
 
 <body>
 
-   <!-- header -->
    <header class="header">
       <div class="container">
          <div class="header__inner">
 
-            <!-- logo -->
             <div class="header__logo">
                <img class="header__logo-img" src="img/icons/logo.svg" width="141" height="53" alt="Скай">
             </div>
 
-            <!-- menu -->
             <nav class="header__menu">
                <ul class="header__menu-list">
                   <li class="header__menu-item">
@@ -49,10 +46,8 @@
                </ul>
             </nav>
 
-            <!-- time -->
-            <p class="header__time">Ежедневно 10.00-22.00</p>
+            <span class="header__time">Ежедневно 10.00-22.00</span>
 
-            <!-- phone -->
             <div class="header__phone">
                <button class="header__phone-btn">
                   <img class="header__phone-img" src="img/icons/phone.svg" width="16" height="16" alt="Телефон">
@@ -63,32 +58,76 @@
       </div>
    </header>
 
-   <main class="main"></main>
+   <main class="main">
 
-   <!-- footer -->
+      <section class="hero">
+         <div class="container">
+
+            <div class="hero__info">
+               <div class="hero__heading">
+                  <h1 class="hero__title">
+                     Аренда спортивного инвентаря и снаряжения для
+                     <span class="hero__title-mark">активного отдыха</span>
+                  </h1>
+                  <p class="hero__text">Пункт по прокату спортивного инвентаря в Перми «Шторм» — это широкий выбор экипировки и оборудования для занятия спортом на улице. </p>
+               </div>
+               <img class="hero__image" src="img/photos/hero.jpg" srcset="img/photos/hero@2x.jpg 2x" width="1290" height="563" alt="Аренда спортивного инвентаря и снаряжения для активного отдыха">
+            </div>
+
+            <div class="hero__features">
+
+               <div class="hero__feature">
+                  <div class="hero__feature-icon">
+                     <img class="hero__feature-img" src="img/icons/hero-1.svg" width="22" height="22" alt="Выгодные условия">
+                  </div>
+                  <h3 class="hero__feature-title">Выгодные условия</h3>
+                  <p class="hero__feature-text">Прокат велосипедов, удобное расположение</p>
+               </div>
+
+               <div class="hero__feature">
+                  <div class="hero__feature-icon">
+                     <img class="hero__feature-img" src="img/icons/hero-2.svg" width="22" height="22" alt="Приемлемые цены">
+                  </div>
+                  <h3 class="hero__feature-title">Приемлемые цены</h3>
+                  <p class="hero__feature-text">Прокат велосипедов, удобное расположение</p>
+               </div>
+
+               <div class="hero__feature">
+                  <div class="hero__feature-icon">
+                     <img class="hero__feature-img" src="img/icons/hero-3.svg" width="21" height="22" alt="Удобное местоположение">
+                  </div>
+                  <h3 class="hero__feature-title">Удобное местоположение</h3>
+                  <p class="hero__feature-text">Прокат велосипедов, удобное расположение</p>
+               </div>
+
+            </div>
+
+         </div>
+      </section>
+
+   </main>
+
    <footer class="footer">
       <div class="container">
 
-         <!-- top -->
          <div class="footer__top">
 
             <div class="footer__logo">
                <img class="footer__logo-img" src="img/icons/logo-white.svg" width="141" height="53" alt="Скай">
             </div>
 
-            <p class="footer__time">Ежедневно 10.00-22.00</p>
+            <span class="footer__time">Ежедневно 10.00-22.00</span>
 
             <address class="footer__address">
                <div class="footer__address-icon">
-                  <img class="footer__address-icon-img" src="img/icons/map-pin.svg" width="16" height="16" loading="lazy" alt="Иконка">
+                  <img class="footer__address-icon-img" src="img/icons/map-pin.svg" width="16" height="16" loading="lazy" alt="Локация">
                </div>
-               <p class="footer__address-text">Шоссе Космонавтов 158/4</p>
+               <span class="footer__address-text">Шоссе Космонавтов 158/4</span>
                <a class="footer__address-link" href="#">Мы на карте</a>
             </address>
 
          </div>
 
-         <!-- middle -->
          <div class="footer__middle">
             <nav class="footer__menu">
                <ul class="footer__menu-list">
@@ -114,7 +153,6 @@
             </nav>
          </div>
 
-         <!-- bottom -->
          <div class="footer__bottom">
             <p class="footer__copyright">© 2007-2025 ООО «Шторм»</p>
          </div>
