--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                <div class="hero__feature">
                   <div class="hero__feature-icon">
-                     <img class="hero__feature-img" src="img/icons/hero-1.svg" width="22" height="22" alt="Выгодные условия">
+                     <img class="hero__feature-img" src="img/icons/hero-01.svg" width="22" height="22" alt="">
                   </div>
                   <h3 class="hero__feature-title">Выгодные условия</h3>
                   <p class="hero__feature-text">Прокат велосипедов, удобное расположение</p>
@@ -86,7 +86,7 @@
 
                <div class="hero__feature">
                   <div class="hero__feature-icon">
-                     <img class="hero__feature-img" src="img/icons/hero-2.svg" width="22" height="22" alt="Приемлемые цены">
+                     <img class="hero__feature-img" src="img/icons/hero-02.svg" width="22" height="22" alt="">
                   </div>
                   <h3 class="hero__feature-title">Приемлемые цены</h3>
                   <p class="hero__feature-text">Прокат велосипедов, удобное расположение</p>
@@ -94,11 +94,78 @@
 
                <div class="hero__feature">
                   <div class="hero__feature-icon">
-                     <img class="hero__feature-img" src="img/icons/hero-3.svg" width="21" height="22" alt="Удобное местоположение">
+                     <img class="hero__feature-img" src="img/icons/hero-03.svg" width="21" height="22" alt="">
                   </div>
                   <h3 class="hero__feature-title">Удобное местоположение</h3>
                   <p class="hero__feature-text">Прокат велосипедов, удобное расположение</p>
                </div>
+
+            </div>
+
+         </div>
+      </section>
+
+      <section class="summer">
+         <div class="container">
+
+            <h2 class="summer__title title-2">
+               Прокат <span class="title-2__mark">летнего инвентаря</span>
+               <img class="title-2__icon" src="img/icons/summer.svg" width="28" height="29" alt="">
+            </h2>
+
+            <div class="summer__cards">
+
+               <a class="card" href="#">
+                  <div class="card__top">
+                     <img class="card__image" src="img/photos/summer-01.jpg" srcset="img/photos/summer-01@2x.jpg 2x" width="630" height="234" alt="">
+                     <div class="card__icon">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                     </div>
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title"></h3>
+                     <p class="card__text"></p>
+                  </div>
+               </a>
+
+               <a class="card" href="#">
+                  <div class="card__top">
+                     <img class="card__image" src="img/photos/summer-02.jpg" srcset="img/photos/summer-02@2x.jpg 2x" width="630" height="234" alt="">
+                     <div class="card__icon">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                     </div>
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title"></h3>
+                     <p class="card__text"></p>
+                  </div>
+               </a>
+
+               <a class="card" href="#">
+                  <div class="card__top">
+                     <img class="card__image" src="img/photos/summer-03.jpg" srcset="img/photos/summer-03@2x.jpg 2x" width="630" height="234" alt="">
+                     <div class="card__icon">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                     </div>
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title"></h3>
+                     <p class="card__text"></p>
+                  </div>
+               </a>
+
+               <a class="card" href="#">
+                  <div class="card__top">
+                     <img class="card__image" src="img/photos/summer-04.jpg" srcset="img/photos/summer-04@2x.jpg 2x" width="630" height="234" alt="">
+                     <div class="card__icon">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                     </div>
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title"></h3>
+                     <p class="card__text"></p>
+                  </div>
+               </a>
 
             </div>
 
