--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
          <div class="container">
 
             <h2 class="summer__title title-2">
-               Прокат <span class="title-2__mark">летнего инвентаря</span>
+               <span class="title-2__text">Прокат <span class="title-2__mark">летнего инвентаря</span></span>
                <img class="title-2__icon" src="img/icons/summer.svg" width="28" height="29" alt="">
             </h2>
 
@@ -117,53 +117,53 @@
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-01.jpg" srcset="img/photos/summer-01@2x.jpg 2x" width="630" height="234" alt="">
+                     <img class="card__image" src="img/photos/summer-01.jpg" srcset="img/photos/summer-01@2x.jpg 2x" width="630" height="234" alt="Велосипеды">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
-                     <h3 class="card__title"></h3>
-                     <p class="card__text"></p>
+                     <h3 class="card__title">Велосипеды</h3>
+                     <p class="card__text">Прокат велосипедов, удобное расположение</p>
                   </div>
                </a>
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-02.jpg" srcset="img/photos/summer-02@2x.jpg 2x" width="630" height="234" alt="">
+                     <img class="card__image" src="img/photos/summer-02.jpg" srcset="img/photos/summer-02@2x.jpg 2x" width="630" height="234" alt="Роликовые коньки">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
-                     <h3 class="card__title"></h3>
-                     <p class="card__text"></p>
+                     <h3 class="card__title">Роликовые коньки</h3>
+                     <p class="card__text">Широкая размерная линейка, в том числе детские.</p>
                   </div>
                </a>
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-03.jpg" srcset="img/photos/summer-03@2x.jpg 2x" width="630" height="234" alt="">
+                     <img class="card__image" src="img/photos/summer-03.jpg" srcset="img/photos/summer-03@2x.jpg 2x" width="630" height="234" alt="Самокаты">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
-                     <h3 class="card__title"></h3>
-                     <p class="card__text"></p>
+                     <h3 class="card__title">Самокаты</h3>
+                     <p class="card__text">Электрические самокаты для скоростных прогулок.</p>
                   </div>
                </a>
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-04.jpg" srcset="img/photos/summer-04@2x.jpg 2x" width="630" height="234" alt="">
+                     <img class="card__image" src="img/photos/summer-04.jpg" srcset="img/photos/summer-04@2x.jpg 2x" width="630" height="234" alt="Детскиее электромобили">
                      <div class="card__icon">
                         <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
-                     <h3 class="card__title"></h3>
-                     <p class="card__text"></p>
+                     <h3 class="card__title">Детскиее электромобили</h3>
+                     <p class="card__text">Порадуйте своего ребенка поездкой на электромашинке!</p>
                   </div>
                </a>
 
