--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="">
+   <meta name="description" content="Аренда спортивного инвентаря и снаряжения для активного отдыха. Пункт по прокату спортивного инвентаря в Перми «Шторм» — это широкий выбор экипировки и оборудования для занятия спортом на улице.">
 
    <title>Скай</title>
 
