--- a/index.html
+++ b/index.html
@@ -171,6 +171,86 @@
          </div>
       </section>
 
+      <section class="winter">
+         <div class="container">
+
+            <h2 class="winter__title title-2">
+               <span class="title-2__text">Прокат <span class="title-2__mark">зимнего инвентаря</span></span>
+               <img class="title-2__icon" src="img/icons/winter.svg" width="29" height="29" alt="">
+            </h2>
+
+            <div class="winter__cards">
+
+               <a class="winter__card card" href="#">
+                  <div class="card__top">
+                     <img class="card__image" src="img/photos/winter-01.jpg" srcset="img/photos/winter-01@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Беговые лыжи">
+                     <div class="card__icon">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                     </div>
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title">Беговые лыжи</h3>
+                     <p class="card__text">Пластиковые и полупластиковые лыжи для катания свободным и классическим стилем</p>
+                  </div>
+               </a>
+
+               <a class="winter__card card" href="#">
+                  <div class="card__top">
+                     <img class="card__image" src="img/photos/winter-02.jpg" srcset="img/photos/winter-02@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Сноуборды">
+                     <div class="card__icon">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                     </div>
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title">Сноуборды</h3>
+                     <p class="card__text">В наличии все размеры, разные типы креплений, доски для новичков</p>
+                  </div>
+               </a>
+
+               <a class="winter__card card" href="#">
+                  <div class="card__top">
+                     <img class="card__image" src="img/photos/winter-03.jpg" srcset="img/photos/winter-03@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Горные лыжи">
+                     <div class="card__icon">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                     </div>
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title">Горные лыжи</h3>
+                     <p class="card__text">Широкая линейка размеров, в том числе детские</p>
+                  </div>
+               </a>
+
+               <a class="winter__card card" href="#">
+                  <div class="card__top">
+                     <img class="card__image" src="img/photos/winter-04.jpg" srcset="img/photos/winter-04@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Зимняя экипировка">
+                     <div class="card__icon">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                     </div>
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title">Зимняя экипировка</h3>
+                     <p class="card__text">Лыжные палки, очки, шлемы, ботинки и тд</p>
+                  </div>
+               </a>
+
+               <a class="winter__card card" href="#">
+                  <div class="card__top">
+                     <img class="card__image" src="img/photos/winter-05.jpg" srcset="img/photos/winter-05@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Зимний инвентарь">
+                     <div class="card__icon">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                     </div>
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title">Зимний инвентарь</h3>
+                     <p class="card__text">Снегокаты, санки, тьюбы и другое для активного отдыха</p>
+                  </div>
+               </a>
+
+            </div>
+
+         </div>
+      </section>
+
    </main>
 
    <footer class="footer">
