--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-01.jpg" srcset="img/photos/summer-01@2x.jpg 2x" width="630" height="234" alt="Велосипеды">
+                     <img class="card__image" src="img/photos/summer-01.jpg" srcset="img/photos/summer-01@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Велосипеды">
                      <div class="card__icon">
-                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
@@ -129,9 +129,9 @@
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-02.jpg" srcset="img/photos/summer-02@2x.jpg 2x" width="630" height="234" alt="Роликовые коньки">
+                     <img class="card__image" src="img/photos/summer-02.jpg" srcset="img/photos/summer-02@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Роликовые коньки">
                      <div class="card__icon">
-                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
@@ -142,9 +142,9 @@
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-03.jpg" srcset="img/photos/summer-03@2x.jpg 2x" width="630" height="234" alt="Самокаты">
+                     <img class="card__image" src="img/photos/summer-03.jpg" srcset="img/photos/summer-03@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Самокаты">
                      <div class="card__icon">
-                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
@@ -155,9 +155,9 @@
 
                <a class="card" href="#">
                   <div class="card__top">
-                     <img class="card__image" src="img/photos/summer-04.jpg" srcset="img/photos/summer-04@2x.jpg 2x" width="630" height="234" alt="Детскиее электромобили">
+                     <img class="card__image" src="img/photos/summer-04.jpg" srcset="img/photos/summer-04@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Детскиее электромобили">
                      <div class="card__icon">
-                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
@@ -185,7 +185,7 @@
                   <div class="card__top">
                      <img class="card__image" src="img/photos/winter-01.jpg" srcset="img/photos/winter-01@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Беговые лыжи">
                      <div class="card__icon">
-                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
@@ -198,7 +198,7 @@
                   <div class="card__top">
                      <img class="card__image" src="img/photos/winter-02.jpg" srcset="img/photos/winter-02@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Сноуборды">
                      <div class="card__icon">
-                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
@@ -211,7 +211,7 @@
                   <div class="card__top">
                      <img class="card__image" src="img/photos/winter-03.jpg" srcset="img/photos/winter-03@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Горные лыжи">
                      <div class="card__icon">
-                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
@@ -224,7 +224,7 @@
                   <div class="card__top">
                      <img class="card__image" src="img/photos/winter-04.jpg" srcset="img/photos/winter-04@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Зимняя экипировка">
                      <div class="card__icon">
-                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
@@ -237,7 +237,7 @@
                   <div class="card__top">
                      <img class="card__image" src="img/photos/winter-05.jpg" srcset="img/photos/winter-05@2x.jpg 2x" width="630" height="234" loading="lazy" alt="Зимний инвентарь">
                      <div class="card__icon">
-                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" alt="">
+                        <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                      </div>
                   </div>
                   <div class="card__bottom">
@@ -248,6 +248,75 @@
 
             </div>
 
+         </div>
+      </section>
+
+      <section class="additional">
+         <div class="container">
+            <div class="additional__inner">
+
+               <div class="additional__heading">
+                  <h2 class="additional__title title-2">Дополнительные услуги</h2>
+                  <p class="additional__subtitle">На все случаи жизни</p>
+               </div>
+
+               <div class="additional__cards">
+
+                  <a class="card" href="#">
+                     <div class="card__top">
+                        <img class="card__image" src="img/photos/additional-01.jpg" srcset="img/photos/additional-01@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Ski-сервис">
+                        <div class="card__icon">
+                           <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
+                        </div>
+                     </div>
+                     <div class="card__bottom card__bottom--white">
+                        <h3 class="card__title">Ski-сервис</h3>
+                        <p class="card__text">У нас есть всё, что необходимо для подготовки и обслуживания инвентаря.</p>
+                     </div>
+                  </a>
+
+                  <a class="card" href="#">
+                     <div class="card__top">
+                        <img class="card__image" src="img/photos/additional-02.jpg" srcset="img/photos/additional-02@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Велосервис">
+                        <div class="card__icon">
+                           <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
+                        </div>
+                     </div>
+                     <div class="card__bottom card__bottom--white">
+                        <h3 class="card__title">Велосервис</h3>
+                        <p class="card__text">Оперативный и качественный ремонт вашего велосипеда с выгодными условиями</p>
+                     </div>
+                  </a>
+
+                  <a class="card" href="#">
+                     <div class="card__top">
+                        <img class="card__image" src="img/photos/additional-03.jpg" srcset="img/photos/additional-03@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Велозапчасти">
+                        <div class="card__icon">
+                           <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
+                        </div>
+                     </div>
+                     <div class="card__bottom card__bottom--white">
+                        <h3 class="card__title">Велозапчасти</h3>
+                        <p class="card__text">В нашем ассортименте имеется огромный выбор недорогих оригинальных деталей</p>
+                     </div>
+                  </a>
+
+                  <a class="card" href="#">
+                     <div class="card__top">
+                        <img class="card__image" src="img/photos/additional-04.jpg" srcset="img/photos/additional-04@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Продажа б/у велосипедов">
+                        <div class="card__icon">
+                           <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
+                        </div>
+                     </div>
+                     <div class="card__bottom card__bottom--white">
+                        <h3 class="card__title">Продажа б/у велосипедов</h3>
+                        <p class="card__text">Продаём исправные велосипеды прошлых сезонов, в том числе детские.</p>
+                     </div>
+                  </a>
+
+               </div>
+
+            </div>
          </div>
       </section>
 
