--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
                   <a class="card" href="#">
                      <div class="card__top">
-                        <img class="card__image" src="img/photos/additional-01.jpg" srcset="img/photos/additional-01@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Ski-сервис">
+                        <img class="card__image" src="img/photos/additional-01.jpg" srcset="img/photos/additional-01@2x.jpg 2x" width="382" height="234" loading="lazy" alt="Ski-сервис">
                         <div class="card__icon">
                            <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                         </div>
@@ -277,7 +277,7 @@
 
                   <a class="card" href="#">
                      <div class="card__top">
-                        <img class="card__image" src="img/photos/additional-02.jpg" srcset="img/photos/additional-02@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Велосервис">
+                        <img class="card__image" src="img/photos/additional-02.jpg" srcset="img/photos/additional-02@2x.jpg 2x" width="382" height="234" loading="lazy" alt="Велосервис">
                         <div class="card__icon">
                            <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                         </div>
@@ -290,7 +290,7 @@
 
                   <a class="card" href="#">
                      <div class="card__top">
-                        <img class="card__image" src="img/photos/additional-03.jpg" srcset="img/photos/additional-03@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Велозапчасти">
+                        <img class="card__image" src="img/photos/additional-03.jpg" srcset="img/photos/additional-03@2x.jpg 2x" width="382" height="234" loading="lazy" alt="Велозапчасти">
                         <div class="card__icon">
                            <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                         </div>
@@ -303,7 +303,7 @@
 
                   <a class="card" href="#">
                      <div class="card__top">
-                        <img class="card__image" src="img/photos/additional-04.jpg" srcset="img/photos/additional-04@2x.jpg 2x" width="410" height="234" loading="lazy" alt="Продажа б/у велосипедов">
+                        <img class="card__image" src="img/photos/additional-04.jpg" srcset="img/photos/additional-04@2x.jpg 2x" width="382" height="234" loading="lazy" alt="Продажа б/у велосипедов">
                         <div class="card__icon">
                            <img class="card__icon-img" src="img/icons/arrow-02.svg" width="24" height="24" loading="lazy" alt="">
                         </div>
@@ -428,6 +428,54 @@
 
             <div class="news__bottom">
                <div class="news__pagination" id="news-swiper-pagination"></div>
+            </div>
+
+         </div>
+      </section>
+
+      <section class="blog">
+         <div class="container">
+
+            <h2 class="blog__title title-2">Блог</h2>
+
+            <div class="blog__cards">
+
+               <a class="blog__card card" href="#">
+                  <div class="blog__card-top card__top">
+                     <img class="card__image" src="img/photos/blog-01.jpg" srcset="img/photos/blog-01@2x.jpg 2x" width="410" height="468" loading="lazy" alt="Как выбрать детские ролики напрокат?">
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title">Как выбрать детские ролики напрокат?</h3>
+                  </div>
+               </a>
+
+               <a class="blog__card card" href="#">
+                  <div class="blog__card-top card__top">
+                     <img class="card__image" src="img/photos/blog-02.jpg" srcset="img/photos/blog-02@2x.jpg 2x" width="410" height="468" loading="lazy" alt="Почему следует использовать специальные носки для роликов?">
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title">Почему следует использовать специальные носки для роликов?</h3>
+                  </div>
+               </a>
+
+               <a class="blog__card card" href="#">
+                  <div class="blog__card-top blog__card-top--large card__top">
+                     <img class="card__image" src="img/photos/blog-03.jpg" srcset="img/photos/blog-03@2x.jpg 2x" width="410" height="190" loading="lazy" alt="Что входит в горнолыжный инвентарь?">
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title">Что входит в горнолыжный инвентарь?</h3>
+                  </div>
+               </a>
+
+               <a class="blog__card card" href="#">
+                  <div class="blog__card-top blog__card-top--large card__top">
+                     <img class="card__image" src="img/photos/blog-04.jpg" srcset="img/photos/blog-04@2x.jpg 2x" width="410" height="190" loading="lazy" alt="Самостоятельная починка велосипеда или велосервис?">
+                  </div>
+                  <div class="card__bottom">
+                     <h3 class="card__title">Самостоятельная починка велосипеда или велосервис?</h3>
+                  </div>
+               </a>
+
             </div>
 
          </div>
